--- a/src/main/resources/Templates/dashboard.html
+++ b/src/main/resources/Templates/dashboard.html
@@ -83,7 +83,7 @@
     <!-- Footer -->
     <div class="footer">
         <p>&copy; <span th:text="${#dates.year(#dates.createNow())}"></span> Your Company. All rights reserved.</p>
-        <p>Powered by <strong>Hodot Signature</strong></p>
+        <p>Powered by <strong>Hodot Signature...</strong></p>
     </div>
 </div>
 </body>
